repo to controller and user lib
