# _gen/openapi.yml
@@ -159,138 +159,6 @@ paths:
           description: successful operation
         '400':
           description: Invalid value
-  /user:
-    x-ogen-operation-group: Users
-    get:
-      tags:
-        - users
-      summary: получение текущего пользователя
-      description: Returns a user
-      operationId: getUser
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-        '400':
-          description: Invalid user
-        '404':
-          description: user not found
-    put:
-      tags:
-        - users
-      summary: Обновление текущего пользователя
-      description: Update a user
-      operationId: updateUser
-      requestBody:
-        description: Update an existent user in the system
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-        '400':
-          description: Invalid user
-        '404':
-          description: user not found
-  /user/{userId}:
-    x-ogen-operation-group: Users
-    get:
-      tags:
-        - users
-      summary: получение пользователя по id
-      description: Returns a user
-      operationId: getUserById
-      parameters:
-        - name: userId
-          in: path
-          description: ID of User to return
-          required: true
-          schema:
-            type: integer
-            description: user id
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-        '400':
-          description: Invalid user
-        '404':
-          description: user not found
-  /users:
-    x-ogen-operation-group: Users
-    get:
-      tags:
-        - users
-      summary: получение списка пользователей
-      description: Returns a users
-      operationId: getUsers
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UsersResponse'
-        '400':
-          description: Invalid user
-        '404':
-          description: user not found
-  /checkuser/{token}:
-    x-ogen-operation-group: Users
-    post:
-      security: []
-      tags:
-        - users
-      summary: Получение токена
-      description: Returns a user
-      operationId: CheckUser
-      parameters:
-        - name: token
-          in: path
-          description: token of yandex
-          required: true
-          schema:
-            type: string
-            description: token
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-        '400':
-          description: Invalid user
-        '404':
-          description: user not found
-  /logout:
-    x-ogen-operation-group: Users
-    post:
-      tags:
-        - users
-      summary: Выход из акаунта
-      description: Удаляет сессию пользователя
-      operationId: Logout
-      responses:
-        '200':
-          description: successful operation
-        '400':
-          description: Invalid param
-        '404':
-          description: check error
 components:
   securitySchemes:
     bearerAuth:
